# codex-business-research-framing

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.arbor/: run.json  tree.json
.github/: pull_request_template.md
docs/: automated-calibration-results.md  automated-triangulation-methodology.md  contrast-set-methodology.md  copyright-and-sources.md  d2-adjudication-root-cause-audit.md  evaluation-methodology.md  evaluator-validity-framework.md  expert-calibration-protocol.md  lean-adjudication-repair-results.md  lean-automated-calibration-methodology.md  lean-automated-calibration-results.md  limitations.md  literature-grounded-skill-design.md  literature-review-protocol.md  literature-synthesis.md  no-human-limitations.md  no-human-validation-policy.md  pr3-partial-run-audit.md  prestige-and-recognition-bias.md  role-separated-judging.md  silver-label-protocol.md  skill-2.1-direct-experimental-results.md  skill-2.2-adaptive-results.md  skill-2.2-adaptive-root-cause-and-plan.md  skill-2.2-routing-canary-results.md  skill-2.2-routing-root-cause-and-plan.md  skill-development-without-evaluator-freeze.md  source-selection-and-exclusion-log.md  top-journal-calibration-protocol.md  top-journal-calibration-results.md  user-workflow-guide.md  v0.1-to-v0.2-change-analysis.md  v0.1.0-baseline-audit.md  v0.2-evaluation-methodology.md  v0.2-evaluation-report.md  v0.2-evaluator-validity-audit.md  v0.2-release-audit.md  v0.3-evaluation-methodology.md  v0.3-evaluation-report.md  (+2 more)
(+1570 files in other folders)
